# huffman-lzw-compressor

./: .gitignore  CMakeLists.txt  Makefile  README.md  txt_exaple_100.txt  txt_exaple_10000.txt  txt_exaple_10k.txt
include/: compressor.hpp
include/cli/: orchestrator.hpp
include/compression/: bitstream.hpp  bitwriter.hpp  huffman.hpp  lzw.hpp
include/decompression/: bitreader.hpp  huffman.hpp  lzw.hpp
include/utils/: metrics.hpp
src/: main.cpp
src/cli/: orchestrator.cpp
src/compression/: bitstream.cpp  bitwriter.cpp  huffman.cpp  lzw.cpp
src/decompression/: bitreader.cpp  huffman.cpp  lzw.cpp
